--- a/style.css
+++ b/style.css
@@ -17,32 +17,32 @@ main {
   margin: 50px;
 }
 
-img {
+div.img {
+  position: relative;
   width: 350px;
+  height: 257px;
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
 
-/*
-div.img {
-  z-index: 2;
-  position: relative;
-  background-color: hsl(277, 64%, 61%, 0.356);
-  height: 257px;
+div.img::after {
+  position: absolute;
+  content: "";
   width: 350px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  height: 257px;
+  background-color: hsla(277, 64%, 61%, 0.356);
+  top: 0;
+  left: 0;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 img {
-  z-index: 1;
-  position: relative;
-  top: -257px;
   width: 350px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  height: 257px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
-*/
 
 div.content {
   padding: 15px;
@@ -100,6 +100,26 @@ div.flex {
     align-items: center;
     margin: auto;
     text-align: start;
+  }
+
+  div.img {
+    position: relative;
+    width: 600px;
+    height: 450px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-top-left-radius: 0;
+  }
+  
+  div.img::after {
+    position: absolute;
+    content: "";
+    width: 600px;
+    height: 450px;
+    background-color: hsla(277, 64%, 61%, 0.356);
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    border-top-left-radius: 0;
   }
 
   img {
